updated shopify cli

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "deploy": "shopify app deploy"
   },
   "dependencies": {
-    "@shopify/app": "3.47.2",
-    "@shopify/cli": "3.47.2"
+    "@shopify/app": "^3.50.0",
+    "@shopify/cli": "^3.50.0"
   },
   "author": "artelomo",
   "private": true,
